Melhora da interfae curso, desenvolvimento de sua chamada e craição de cursoController e CursoAction

--- a/SistemaEscola/src/views/CursoJInternalFrame.form
+++ b/SistemaEscola/src/views/CursoJInternalFrame.form
@@ -24,34 +24,34 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
-                          <Component id="cursoJLabel" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="idJLabel" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="idJTextField" min="-2" pref="43" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="searchIdJButton" min="-2" pref="41" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
+                      <Component id="cursoJLabel" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="idJLabel" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="idJTextField" min="-2" pref="43" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="searchIdJButton" min="-2" pref="39" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="jPanel1" max="32767" attributes="0"/>
                               <Component id="jPanel2" max="32767" attributes="0"/>
                           </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="limparJButton" min="-2" pref="57" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
+                              <Component id="salvarJButton" min="-2" pref="57" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="cancelarJButton" min="-2" pref="57" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="131" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="138" max="-2" attributes="0"/>
-                      <Component id="limparJButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
-                      <Component id="salvarJButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="cancelarJButton" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace pref="27" max="32767" attributes="0"/>
@@ -80,12 +80,14 @@
               <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
               <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="cancelarJButton" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="cancelarJButton" max="32767" attributes="0"/>
+                      <Component id="limparJButton" max="32767" attributes="0"/>
+                  </Group>
                   <Component id="salvarJButton" min="-2" max="-2" attributes="0"/>
-                  <Component id="limparJButton" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="29" max="32767" attributes="0"/>
+              <EmptySpace pref="34" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -153,13 +155,13 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="nomeJTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="nomeJLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="searchNomeJButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="searchNomeJButton" alignment="0" min="-2" pref="20" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="professorJTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="professorJLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="searchProfessorJButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="searchProfessorJButton" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -223,14 +225,14 @@
         <Component class="javax.swing.JButton" name="searchNomeJButton">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/img/Search.png"/>
+              <Image iconType="3" name="/img/search_black.png"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="searchProfessorJButton">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/img/Search.png"/>
+              <Image iconType="3" name="/img/search_black.png"/>
             </Property>
           </Properties>
         </Component>
@@ -289,21 +291,21 @@
     <Component class="javax.swing.JButton" name="salvarJButton">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/img/Save.jpg"/>
+          <Image iconType="3" name="/img/save_blue.png"/>
         </Property>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="limparJButton">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/img/Color wheel.png"/>
+          <Image iconType="3" name="/img/clear.png"/>
         </Property>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="cancelarJButton">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/img/Delete.gif"/>
+          <Image iconType="3" name="/img/cancelar.png"/>
         </Property>
       </Properties>
     </Component>
@@ -317,9 +319,15 @@
     <Component class="javax.swing.JButton" name="searchIdJButton">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/img/Search.png"/>
+          <Image iconType="3" name="/img/search_black.png"/>
         </Property>
       </Properties>
+      <AccessibilityProperties>
+        <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value="Procure por cursos  com o respectivo id"/>
+      </AccessibilityProperties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchIdJButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
